--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,15 @@ base {
 }
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
+	mavenCentral()
+	mavenLocal()
+	maven {
+		name = "FabricMC"
+		url = "https://maven.fabricmc.net/"
+	}
+	flatDir {
+		dirs("libs")
+	}
 	// You should only use this when depending on other mods because
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
@@ -34,7 +42,7 @@ loom {
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2" // ensure this matches your MC version
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
